[package]
name = "voidpoc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v4"] }
simdnbt = "0.7.1"
bit-set = "0.8.0"
crab_nbt = "0.2.9"
